# prompts

./: .gitignore  Cargo.toml  README.md  changelog
migrations/: 20250709022138_c_prompts_tbl.down.sql  20250709022138_c_prompts_tbl.up.sql  20250724234734_create_tables.down.sql  20250724234734_create_tables.up.sql  20250730202229_snippets.up.sql
sql/: i_actions.sql  i_artist_combos.sql  i_artists.sql  i_base.sql  i_base_prompts.sql  i_body.sql  i_char.sql  i_character_prompts.sql  i_characters.sql  i_characters_desc.sql  i_expressions.sql  i_locations.sql  i_negatives.sql  i_outfits.sql  i_postures.sql  i_prompt_starts.sql  i_quality.sql  i_scenes.sql  i_series.sql  i_tags.sql  i_template.sql  s_template.sql  s_template_all.sql
src/: db.rs  files.rs  files2.rs  image_metadata.rs  import.rs  main.rs  nai.rs  prompt.rs  ui.rs
