[package]
name = "prompts"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
clap = { version = "4.5.40", features = ["derive"] }
dotenvy = "0.15.7"
rand = "0.9.1"
reqwest = { version = "0.12.22", features = ["json"] }
rusqlite = "0.37.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
zip = "4.2.0"
