[package]
name = "prompts"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
clap = { version = "4.5.40", features = ["derive"] }
dotenvy = "0.15.7"
flate2 = {version = "1.1.2", default-features = false, features = ["zlib-rs"] }
iced = {version = "0.13.1", features = ["image", "tokio"] }
image = {version = "0.25.6", default-features = false, features = ["jpeg", "png"] } 
ndarray = "0.16.1"
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
rand = "0.9.1"
reqwest = { version = "0.12.22", features = ["json"] }
rusqlite = { version = "0.37.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "fs", "time", "sync"] }
zip = {version = "4.2.0", default-features = false, features = ["deflate"] }
